syntax = "proto3";

package users;
option go_package = "proto/users";

message RegisterRequest {
    string email = 1;
    string password = 2;
    string username = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message IdModel {
    int64 id = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    optional string username = 2;
    optional string email = 3;
}

message TokenResponse {
    string token = 1;
}

message GetUserResponse {
    int64 id = 1;
    string username = 2;
    string email = 3;
}


service UsersService {
    rpc Register(RegisterRequest) returns (TokenResponse) {}
    rpc Login(LoginRequest) returns (TokenResponse) {}
    rpc GetUserById(IdModel) returns (GetUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (GetUserResponse) {}
    rpc DeleteUser(IdModel) returns (IdModel) {}
}

